# gitreins

./: .gitignore  .gitleaks.toml  .gitleaksignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.coding-hermes/: tasks.md
.github/workflows/: ci.yml
.gitreins/: config.yaml
.gitreins/history/2026-06-11/058d55a4/: summary.md  verdict.json
.hermes/: acceptance-criteria.md
.memory-bank/: _index.md  architecture.md  provider-integration.md
.memory-bank/adr/: adr-001-gitreins-dir-storage.md  adr-002-openai-compatible-llm.md  adr-003-guard-pipeline.md  adr-004-evaluator-agent-loop.md
.memory-bank/findings/: finding-001-deepseek-provider-quirks.md  finding-002-minimax-reasoning-mode.md  finding-003-skylos-integration.md  finding-004-precommit-guard-false-positives.md
.memory-bank/work-items/: STATUS.md
.vfs/graph/: edges.jsonl
docs/: architecture.md  build-vs-borrow.md  component-map.md  evaluator-loop.md  evidence-contract-v1.md  implementation-plan.md  pi-research.md  sandbox.md  technology-choices.md
engine/: __init__.py  antares.py  commit_audit.py  config.py  cve_feed.py  dead_code.py  eval_cap.py  evaluator.py  evidence.py  guard_manager.py  guards.py  judge.py  llm.py  lsp.py  persist.py  pipeline.py  propagate.py  static_analysis.py  task_manager.py  types.py
gitreins/: cli.py  install
gitreins_mcp/: __init__.py  server.py
sandbox/: test_review.py  test_review_sample.py
schemas/: evidence-v1.schema.json
specs/: 00-PRD.md  01-Architecture.md  02-MCP-Protocol.md  03-Evaluator-Design.md  04-Guard-System.md  05-Security-Model.md  06-Pipeline.md  07-Config-System.md  08-Test-Strategy.md  09-CLI-Design.md  10-Deployment.md
tests/: __init__.py  conftest.py  test_antares.py  test_cli.py  test_commit_audit.py  test_config.py  test_config_priority.py  test_dead_code.py  test_eval_cap.py  test_eval_static_analysis.py  test_evaluator.py  test_evidence_contract.py  test_guard_exit.py  test_guard_manager.py  test_guards.py  test_judge.py  test_llm.py  test_lsp.py  test_mcp_integration.py  test_mcp_server.py  test_persist.py  test_pipeline.py  test_propagate.py  test_secrets_completeness.py  test_secrets_scanner.py  test_static_analysis.py  test_task_manager.py  test_types.py  test_v07_features.py  test_v081_fixes.py
tests/fixtures/lsp/: .gitleaks.toml  README.md  pyproject.toml
tests/fixtures/lsp/.gitreins/: config.yaml
tests/fixtures/lsp/cmake/: CMakeLists.txt
tests/fixtures/lsp/cpp/: main.c
tests/fixtures/lsp/go/: go.mod  main.go
tests/fixtures/lsp/kotlin/: main.kt
tests/fixtures/lsp/python/: consumer.py  main.py  models.py
tests/fixtures/lsp/ruby/: main.rb
tests/fixtures/lsp/rust/: main.rs
tests/fixtures/lsp/sql/: query.sql
tests/fixtures/lsp/swift/: main.swift
tests/fixtures/lsp/typescript/: main.ts  tsconfig.json
tests/fixtures/secrets/: negative_documentation.md  negative_empty_passwords.py  negative_jwt_encode.py  negative_os_getenv.py  negative_placeholders.py  negative_shell_vars.py  negative_template_vars.py  positive_aws.py  positive_gcp.py  positive_github.py  positive_gitlab.py  positive_jwt.py  positive_openai.py  positive_openrouter.py  positive_passwords.py  positive_private_keys.py  positive_slack.py  positive_stripe.py
tests/reliability/dead-tests/: criteria.json  test_arithmetic.py  test_strings.py
tests/reliability/hallucinated-import/: criteria.json  data_pipeline.py  image_pipeline.py
tests/reliability/missing-error-handling/: criteria.json  domain_ops.py  io_ops.py
tests/reliability/secret-leak/: auth.py  config.py  criteria.json
tests/reliability/silent-exception/: api.py  criteria.json  db.py
tests/reliability/silent-logic-bug/: criteria.json  stats.py  strings.py
tests/reliability/wrong-control-flow/: control.py  criteria.json  iter.py
website/: index.html
