[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitreins"
version = "0.7.9"
description = "Git-native AI agent co-harness — MCP server, static guards, and agentic evaluator for LLM-assisted coding"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Bane"}]
keywords = ["git", "ai", "llm", "mcp", "code-review", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=5.0",
    "build>=1.0",
]

[project.scripts]
gitreins = "gitreins.cli:main"

[project.urls]
Homepage = "https://github.com/totalwindupflightsystems/gitreins"
Repository = "https://github.com/totalwindupflightsystems/gitreins"
Issues = "https://github.com/totalwindupflightsystems/gitreins/issues"

[tool.setuptools.packages.find]
include = ["engine*", "gitreins*", "gitreins_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
# LLM system prompts — breaking lines changes the prompt text sent to the model
"engine/evaluator.py" = ["E501"]
# Test files — long assertion lines, fixtures, and test data strings
"tests/**/*.py" = ["E501"]
# Secrets scanner fixtures — intentionally malformed Python (shell scripts, templates, etc.)
"tests/fixtures/secrets/**" = ["ALL"]
# gitreins_mcp JSON-RPC handler — long JSON schema strings
"gitreins_mcp/server.py" = ["E501"]
# Guard manager — long regex patterns for secret detection
"engine/guard_manager.py" = ["E501"]
# Pipeline templates — long embedded shell command strings for YAML generation
"engine/pipeline.py" = ["E501"]
# CLI — long help strings and argument definitions
"gitreins/cli.py" = ["E501"]
# B904: `raise ... from err` inside except — prevents swallowed exceptions
# by forcing explicit exception chaining.
#
# Future: enable B001-B032 (flake8-bugbear) which includes:
#   B001: bare except: — catches BaseException, should be except Exception:
#   B015: pointless comparison
#   B023: function uses loop variable
#   B904: raise without from inside except
# Enable with: extend-select = ["B"] after fixing existing violations.