[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitreins"
version = "0.10.2"
description = "Git-native AI agent co-harness — MCP server, static guards, and agentic evaluator for LLM-assisted coding"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Bane"}]
keywords = ["git", "ai", "llm", "mcp", "code-review", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "twine>=5.0",
    "build>=1.0",
    "python-lsp-server>=1.10",
    "pyflakes>=3.0",
    "pycodestyle>=2.11",
    "mypy>=1.0",
    "pytest-xdist>=3.0",
    "ruff>=0.5",
    "types-PyYAML>=6.0",
]
antares = [
    "huggingface_hub>=0.28",
    "transformers>=4.50",
    "onnxruntime>=1.19",
]

[project.scripts]
gitreins = "gitreins.cli:main"

[project.urls]
Homepage = "https://github.com/totalwindupflightsystems/gitreins"
Repository = "https://github.com/totalwindupflightsystems/gitreins"
Issues = "https://github.com/totalwindupflightsystems/gitreins/issues"

[tool.setuptools.packages.find]
include = ["engine*", "gitreins*", "gitreins_mcp*"]

[tool.pytest.ini_options]
addopts = "-n 4"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
exclude = [
    "^tests/fixtures/",          # test fixtures (secrets, lsp, etc.) — not real code
    "^tests/reliability/",       # intentionally buggy: test fixtures with known flaws for reliability benchmarks
    "^sandbox/",                 # evaluation scratch space — not production code
    "^demo-calc/",               # demo project — invalid Python package name
    "^temporal-vector/",         # experimental vector encoding — not production code
    "^demo-slugify/",            # demo project — permission-restricted
]
disallow_untyped_defs = false
disallow_any_generics = false
warn_return_any = false
no_implicit_optional = false
[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
extend-exclude = [
    "tests/fixtures/secrets/*.py",  # intentionally malformed: shell scripts, templates, not valid Python
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "B904",   # raise without from inside except
]

[tool.ruff.lint.per-file-ignores]
# LLM system prompts — breaking lines changes the prompt text sent to the model
"engine/evaluator.py" = ["E501"]
# Commit audit — LLM review prompts in docstrings; config — inline comments on dataclass fields
"engine/commit_audit.py" = ["E501"]
"engine/config.py" = ["E501"]
# Test files — long assertion lines, fixtures, and test data strings; unused variables often check imports
"tests/**/*.py" = ["E501", "F841"]
# Secrets scanner fixtures — intentionally malformed Python (shell scripts, templates, etc.)
"tests/fixtures/secrets/**" = ["ALL"]
# gitreins_mcp JSON-RPC handler — long JSON schema strings
"gitreins_mcp/server.py" = ["E501"]
# Guard manager — long regex patterns for secret detection
"engine/guard_manager.py" = ["E501"]
# Pipeline templates — long embedded shell command strings for YAML generation
"engine/pipeline.py" = ["E501"]
# CLI — long help strings and argument definitions
"gitreins/cli.py" = ["E501"]

[dependency-groups]
dev = [
    "pycodestyle>=2.14.0",
    "pyflakes>=3.4.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.5",
]
# B904: `raise ... from err` inside except — prevents swallowed exceptions
# by forcing explicit exception chaining.
#
# Future: enable B001-B032 (flake8-bugbear) which includes:
#   B001: bare except: — catches BaseException, should be except Exception:
#   B015: pointless comparison
#   B023: function uses loop variable
#   B904: raise without from inside except
# Enable with: extend-select = ["B"] after fixing existing violations.